--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,14 @@ services:
     ports:
       - "25565:25565"
     volumes:
-      - ./ftb-dw20:/opt/minecraft
+      - .ftb-dw20/world:/opt/minecraft/world
+      - .ftb-dw20/backups:/opt/minecraft/backups
+    environment:
+      - MINECRAFT_OPTS=-server -Xms8192m -Xmx8192m -XX:+UseParNewGC -XX:+UseConcMarkSweepGC
+      - MINECRAFT_EULA=true
+      - DEFAULT_OP=skug
     env_file:
-      - .env-dw20
+      - .env
+    stdin_open: true
+    tty: true
 
